--- a/build.xml
+++ b/build.xml
@@ -25,6 +25,7 @@
         </move>
         <move todir="dist">
             <fileset dir="export">
+                <exclude name="build.xml"/>
                 <exclude name="future.txt"/>
             </fileset>
         </move>
