excluded dirs.txt from build

--- a/build.xml
+++ b/build.xml
@@ -90,6 +90,7 @@
         <move todir="dist">
             <fileset dir="export">
                 <exclude name="build.xml"/>
+                <exclude name="dirs.txt"/>
             </fileset>
         </move>
         <delete dir="export"/>
