--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,10 @@
 
 <project name="Pagamanger" default="default">
 
+    <!-- Properties -->
+
+    <property name="styledir" value="C:\xampp\php\data\phing\etc"/>
+
     <!-- Filesets -->
 
     <fileset id="php-sources" dir=".">
@@ -51,8 +55,24 @@
 
     <target name="all-tests" depends="unit-tests,attack-tests"/>
 
+    <!-- Code coverage -->
+
     <target name="coverage">
-        <exec command="phpunit --coverage-html tests/coverage tests/unit"/>
+        <coverage-setup database="tests/coverage/coverage.db">
+            <fileset dir="classes">
+                <include name="*.php"/>
+            </fileset>
+        </coverage-setup>
+        <phpunit codecoverage="true">
+            <batchtest>
+                <fileset dir="tests/unit">
+                    <include name="*Test.php"/>
+                </fileset>
+            </batchtest>
+        </phpunit>
+        <coverage-report outfile="tests/coverage/coverage.xml">
+            <report todir="tests/coverage" styledir="${styledir}"/>
+        </coverage-report>
     </target>
 
     <!-- Documentation -->
