--- a/build.xml
+++ b/build.xml
@@ -117,6 +117,7 @@
                 <exclude name="build.xml"/>
                 <exclude name="phpcompatinfo.xml"/>
                 <exclude name="TODO"/>
+                <exclude name="tests/**"/>
             </fileset>
         </move>
         <delete dir="export"/>
