--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
     <!-- Checks -->
 
     <target name="sniff">
-        <phpcodesniffer standard="PEAR">
+        <phpcodesniffer standard="PEAR" format="full">
             <fileset refid="php-sources"/>
         </phpcodesniffer>
     </target>
