fixed CS violations

--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,8 @@
     <target name="sniff" description="checks adherence to PEAR CS">
         <phpcodesniffer standard="PEAR" format="full">
             <fileset refid="php-sources"/>
+            <fileset refid="unit-tests"/>
+            <fileset refid="attack-tests"/>
         </phpcodesniffer>
     </target>
 
