added shrinking of JS files to build target

--- a/build.xml
+++ b/build.xml
@@ -97,6 +97,12 @@
                 </replacetokens>
             </filterchain>
         </move>
+        <jsMin targetDir="dist" suffix="" failOnError="false">
+            <fileset dir="export">
+                <include name="*.js"/>
+                <include name="jstree/*.js"/>
+            </fileset>
+        </jsMin>
         <move todir="dist">
             <fileset dir="export">
                 <exclude name="pagemanager.komodoproject"/>
