--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@
 
     <target name="compat"
             description="checks compatibility with PHP_CompatInfo">
-        <exec command="phpcompatinfo analyser:run ." logoutput="true"/>
+        <exec command="phpcompatinfo analyser:run --alias current" logoutput="true"/>
     </target>
 
     <target name="unit-tests" description="runs all unit tests">
