Don't distribute pax_global_header

--- a/build.xml
+++ b/build.xml
@@ -105,6 +105,7 @@
                 <exclude name="build.xml"/>
                 <exclude name="composer.*"/>
                 <exclude name="coverage.xml"/>
+                <exclude name="pax_global_header"/>
                 <exclude name="phpcompatinfo.*"/>
                 <exclude name="tests/**"/>
             </fileset>
