--- a/build.xml
+++ b/build.xml
@@ -20,8 +20,8 @@
         <echo>${help}</echo>
     </target>
 
-    <target name="sniff" description="checks adherence to PEAR CS">
-        <phpcodesniffer standard="PEAR" format="full">
+    <target name="sniff" description="checks adherence to coding standards">
+        <phpcodesniffer standard="PSR2" format="full">
             <fileset refid="php-sources"/>
             <fileset refid="unit-tests"/>
             <fileset refid="attack-tests"/>
