--- a/build.xml
+++ b/build.xml
@@ -89,6 +89,16 @@
         </jsMin>
         <move todir="dist">
             <fileset dir="export">
+                <include name="views/*.php"/>
+            </fileset>
+            <filterchain>
+                <replaceregexp>
+                    <regexp pattern="\?=" replace="?php echo "/>
+                </replaceregexp>
+            </filterchain>
+        </move>
+        <move todir="dist">
+            <fileset dir="export">
                 <exclude name="build.xml"/>
                 <exclude name="composer.*"/>
                 <exclude name="coverage.xml"/>
