--- a/build.xml
+++ b/build.xml
@@ -72,7 +72,7 @@
         <delete file="export.tar"/>
         <move todir="dist">
             <fileset dir="export">
-                <include name="admin.php"/>
+                <include name="classes/Plugin.php"/>
                 <include name="version.nfo"/>
             </fileset>
             <filterchain>
