Don't distribute README.md

--- a/build.xml
+++ b/build.xml
@@ -104,6 +104,7 @@
                 <exclude name="coverage.xml"/>
                 <exclude name="pax_global_header"/>
                 <exclude name="phpcompatinfo.*"/>
+                <exclude name="README.md"/>
                 <exclude name="tests/**"/>
             </fileset>
         </move>
