Fix unit tests and coverage report for PHP 7
We say goodbye to runkit, since the official PECL/runkit still does not
support PHP 7.  Instead we switch to PECL/uopz which appears to more
suitable anyway, and drop support for running the unit tests under PHP
5.

--- a/build.xml
+++ b/build.xml
@@ -62,7 +62,7 @@
             description="runs all tests"/>
 
     <target name="coverage" description="generates coverage report">
-        <exec command="phpunit --configuration coverage.xml" logoutput="true"/>
+        <exec command="phpdbg -qrr vendor/phpunit/phpunit/phpunit --configuration coverage.xml" logoutput="true"/>
     </target>
 
     <target name="build" description="builds distributable ZIP archive">
