Unify README and help files
README.md is particularly useful for Github, where full-fledged usage
information is desirable.  Also it is more convenient to write Markdown
than HTML.  Therefore we make README.md the canonical format, and
generate help.htm via Pandoc.

We also remove the READMEs from the distribution builds, since
CMSimple_XH users are accustomed to find the manuals in help/.

--- a/build.xml
+++ b/build.xml
@@ -65,6 +65,11 @@
         <exec command="phpdbg -qrr vendor/phpunit/phpunit/phpunit --configuration coverage.xml" logoutput="true"/>
     </target>
 
+    <target name="gen-help" description="builds help.htm from README.md">
+        <exec command="pandoc -s --eol=lf --template=help/template.htm -Vlang=en -Vpagetitle=&quot;User Manual&quot; -o help/help.htm README.md -t html" logoutput="true"/>
+        <exec command="pandoc -s --eol=lf --template=help/template.htm -Vlang=cs -Vpagetitle=&quot;Benutzerhandbuch&quot; -o help/help_de.htm README_DE.md -t html" logoutput="true"/>
+    </target>
+
     <target name="build" description="builds distributable ZIP archive">
         <fail unless="version" message="version is not defined!"/>
         <exec command="git archive -o export.zip HEAD" checkreturn="true"/>
@@ -102,9 +107,10 @@
                 <exclude name="build.xml"/>
                 <exclude name="composer.*"/>
                 <exclude name="coverage.xml"/>
+                <exclude name="help/template.htm"/>
                 <exclude name="pax_global_header"/>
                 <exclude name="phpcompatinfo.*"/>
-                <exclude name="README.md"/>
+                <exclude name="README*.md"/>
                 <exclude name="tests/**"/>
             </fileset>
         </move>
