--- a/build.xml
+++ b/build.xml
@@ -100,6 +100,7 @@
                 <exclude name="pax_global_header"/>
                 <exclude name="phpcompatinfo.*"/>
                 <exclude name="README*.md"/>
+                <exclude name="teplad.xml"/>
                 <exclude name="tests/**"/>
             </fileset>
         </move>
