Switch dev tools from composer to phive where possible
This mitigates the dependency hell, and also lets us quickly change
PHPUnit versions for testing with different PHP versions.

The downside is that it introduces yet another tool, but we hope to get
rid of the composer dev requirements in the long run.

To be clear, composer is a *great* tool, but not so for dev
requirements.

--- a/build.xml
+++ b/build.xml
@@ -25,9 +25,9 @@
     </target>
 
     <target name="mess" description="detects code flaws">
-        <phpmd rulesets="codesize,unusedcode">
-            <fileset refid="php-sources"/>
-         </phpmd>
+        <exec executable="phpmd" passthru="true" checkreturn="true">
+            <arg line="admin.php,classes ansi codesize,unusedcode"/>
+        </exec>
     </target>
 
     <target name="compat"
