Don't distribute .github

--- a/build.xml
+++ b/build.xml
@@ -114,6 +114,7 @@
         </move>
         <move todir="dist">
             <fileset dir="export">
+                <exclude name=".github"/>
                 <exclude name="build.xml"/>
                 <exclude name="composer.*"/>
                 <exclude name="coverage.xml"/>
