--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
         run: cd cmsimplexh/plugins/pagemanager && composer install
       - name: phing sniff
         run: cd cmsimplexh/plugins/pagemanager && PATH=tools:vendor/bin:$PATH phing sniff
+      - name: phing stan
+        run: cd cmsimplexh/plugins/pagemanager && PATH=tools:vendor/bin:$PATH phing stan
       - name: phing mess
         run: cd cmsimplexh/plugins/pagemanager && PATH=tools:vendor/bin:$PATH phing mess
       - name: phing unit-tests
