Fix #71: Prevent saving linked_to_menu as published and vice versa
We store the current pagedata_attribute in a hidden form field, and
reject form submission if its value has changed.  That should be good
enough to cater to this pathological case.

We also drop the PHPStan baseline, and replace it with a more general
error suppression regarding unknown View attributes.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,3 @@
-includes:
-  - phpstan-baseline.neon
 parameters:
   level: 8
   paths:
@@ -15,3 +13,5 @@ parameters:
     - ../../cmsimple/functions.php
     - ../fa/classes/RequireCommand.php
     - ../jquery/jquery.inc.php
+  ignoreErrors:
+    - "#^Access to an undefined property Pagemanager\\\\View\\:\\:\\$[_A-Za-z0-9]+\\.$#"
