--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require-dev": {
-        "mikey179/vfsstream": "1.6.*"
+        "mikey179/vfsstream": "1.6.*",
+        "phing/phing": "^2.17.0",
+        "squizlabs/php_codesniffer": "^3.5.8",
+        "phpmd/phpmd": "^2.9.1",
+        "phpunit/phpunit": "^8.5.14",
+        "phpstan/phpstan": "^0.12.80"
     }
 }
