--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,14 @@ on: [push, pull_request]
 jobs:
   checks:
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        php: ['7.3', '7.4', '8.0', '8.1', '8.2']
     steps:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.4'
+          php-version: ${{matrix.php}}
           tools: composer
       - name: Install CMSimple_XH
         run: |
